--- a/css/style.css
+++ b/css/style.css
@@ -123,14 +123,24 @@ img {
 /* Header */
 
 .barra {
-  padding: 1.6rem 4.6rem;
+  padding: 1.6rem 2.6rem;
   background-color: var(--blanco);
 
+  position: fixed;
+  top: -300px;
+  width: 100%;
+  transition: 0.3s;
+  z-index: 1;
+
   /* Glassmorphism */
-  /* background: rgba(255, 255, 255, 0);
-  backdrop-filter: blur(10px);
-  -webkit-backdrop-filter: blur(10px);
+  /* background: rgba(255, 255, 255, 0.2);
+  backdrop-filter: blur(20px);
+  -webkit-backdrop-filter: blur(20px);
   border: 1px solid rgba(255, 255, 255, 0.3); */
+}
+
+.barra.active {
+  top: 0;
 }
 
 @media (min-width: 768px) {
@@ -149,10 +159,9 @@ img {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    top: 0;
   }
 }
-
-
 
 .logo img {
   display: flex;
@@ -186,6 +195,32 @@ img {
   margin-top: 2rem;
 }
 
+.menu-btn {
+  display: block;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  padding: 10px;
+  position: absolute;
+  right: 20px;
+  top: 20px;
+  z-index: 2;
+}
+
+.menu-btn i {
+  color: var(--azul-marino);
+  font-size: 2.2rem;
+  transition: all .3s;
+}
+
+.menu-btn:hover i {
+  color: var(--azul-claro);
+}
+
+.menu-btn.active {
+  position: fixed;
+}
+
 @media (min-width: 768px) {
   .nav {
     display: flex;
@@ -195,6 +230,10 @@ img {
 
   .nav .nav-enlace {
     font-size: 1.3rem;
+  }
+
+  .menu-btn {
+    display: none;
   }
 }
 
@@ -285,7 +324,7 @@ img {
 .btn-grad {
   background: var(--gradiente);
   grid-column: 2;
-  transition: background;
+  transition: background-color;
 }
 
 .btn-body {
@@ -318,7 +357,9 @@ img {
   text-align: center;
   padding: .3rem;
   color: var(--azul-marino);
+  text-decoration: none;
   transition: color .5s;
+  transition: 0.2s;
 }
 
 .nav-enlace:hover {
@@ -1546,6 +1587,7 @@ table th:last-child {
   margin: 0 auto;
   background-size: cover;
   background-repeat: no-repeat;
+  background-position: center;
 }
 
 .formulario {
