--- a/css/style.css
+++ b/css/style.css
@@ -127,8 +127,9 @@ img {
   background-color: var(--blanco);
 
   position: fixed;
-  top: -300px;
+  right: -600px;
   width: 100%;
+  height: 100%;
   transition: 0.3s;
   z-index: 1;
 
@@ -140,7 +141,7 @@ img {
 }
 
 .barra.active {
-  top: 0;
+  right: 0;
 }
 
 @media (min-width: 768px) {
@@ -159,7 +160,8 @@ img {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    top: 0;
+    right: 0;
+    height: 8%;
   }
 }
 
