--- a/css/style.css
+++ b/css/style.css
@@ -129,7 +129,7 @@ img {
   position: fixed;
   right: -600px;
   width: 100%;
-  height: 100%;
+  min-height: 100vh;
   transition: 0.3s;
   z-index: 1;
 
@@ -161,7 +161,7 @@ img {
     justify-content: space-between;
     align-items: center;
     right: 0;
-    height: 8%;
+    min-height: 8vh;
   }
 }
 
