--- a/css/style.css
+++ b/css/style.css
@@ -813,6 +813,10 @@ i {
   font-size: 1.6rem;
 }
 
+.login-form, .register-user-form {
+  width: 100%;
+}
+
 .login-form input {
   width: 100%;
 }
@@ -832,6 +836,12 @@ i {
 .body-login {
   background-color: var(--fondo);
   padding: 3rem;
+}
+
+@media (max-width: 768px) {
+  .body-login, .body-register {
+    padding: 0;
+  }
 }
 
 .welcome {
